# object314_chrono

./: .clang-format  .gitattributes  .gitignore  .gitmodules  README.md  docker-compose.nmpc.yaml  docker-compose.yaml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml
docker/: chrono.dockerfile  entrypoint.sh  object314_chrono.dockerfile  tracked_sim.dockerfile
docker/chrono/: README.md  chrono.dockerfile  cuda.dockerfile  entrypoint.sh  main.dockerfile  python.dockerfile  requirements.txt  ros.dockerfile
docker/chrono/snippets/: ch_csharp.dockerfile  ch_dem.dockerfile  ch_fsi.dockerfile  ch_irrlicht.dockerfile  ch_modal.dockerfile  ch_multicore.dockerfile  ch_parser.dockerfile  ch_postprocess.dockerfile  ch_python.dockerfile  ch_ros.dockerfile  ch_sensor.dockerfile  ch_synchrono.dockerfile  ch_vehicle.dockerfile  ch_vsg.dockerfile
object314/: CMakeLists.txt
object314/src/: main.cpp
object314/src/robot/: object314_vehicle.hpp
src/: CMakeLists.txt  main.cpp  pid_control.cpp  ros_sim.cpp
src/object314/: CMakeLists.txt  Object314.cpp  Object314.hpp  Object314_Chassis.cpp  Object314_Chassis.hpp  Object314_SimpleDriveline.cpp  Object314_SimpleDriveline.hpp  Object314_Vehicle.cpp  Object314_Vehicle.hpp
src/object314/powertrain/: Object314_AutomaticTransmissionShafts.cpp  Object314_AutomaticTransmissionShafts.hpp  Object314_AutomaticTransmissionSimple.cpp  Object314_AutomaticTransmissionSimple.hpp  Object314_AutomaticTransmissionSimpleMap.cpp  Object314_AutomaticTransmissionSimpleMap.hpp  Object314_EngineShafts.cpp  Object314_EngineShafts.hpp  Object314_EngineSimple.cpp  Object314_EngineSimple.hpp  Object314_EngineSimpleMap.cpp  Object314_EngineSimpleMap.hpp
src/object314/track_assembly/: Object314_BrakeShafts.hpp  Object314_BrakeSimple.hpp  Object314_Idler.cpp  Object314_Idler.hpp  Object314_IdlerWheel.cpp  Object314_IdlerWheel.hpp  Object314_RoadWheel.cpp  Object314_RoadWheel.hpp  Object314_SprocketSinglePin.cpp  Object314_SprocketSinglePin.hpp  Object314_SupportRoller.cpp  Object314_SupportRoller.hpp  Object314_Suspension.cpp  Object314_Suspension.hpp  Object314_TrackAssemblySinglePin.cpp  Object314_TrackAssemblySinglePin.hpp  Object314_TrackShoeSinglePin.cpp  Object314_TrackShoeSinglePin.hpp
